[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.04, 0.03, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Some of you
may die.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 16)

[node name="NewGameBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="ContinueBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="SettingsBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="AccountBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Account"

[node name="GuideBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Guide"
